--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-elastic-carousel": "^0.11.5",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
@@ -18,7 +18,10 @@
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
-
+"peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
   
   "scripts": {
     "start": "react-scripts start",
